assembly plugin configured to build uber jar

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ play.http.filters= filters.Filters
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "abc123"
 
 # The application languages
 # ~~~~~
